[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = "Testing poetry and using docker to deploy it."
authors = ["Tawanda M Nyoni <tmnyoni@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
mangum = "^0.19.0"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
